2009-04-15 Kazuhiko
* move open order functionality to erp5_open_order BT.

2009-04-11 jps
* first version built from erp5_trade