@@ -8,9 +8,7 @@ Open Internal Order | payment_condition
 Open Internal Order | profile_view
 Open Internal Order | reference_generate
 Open Internal Order | view
-Open Internal Order | view_discount
 Open Internal Order | view_stock
-Open Internal Order | view_tax
 Open Order Rule | view
 Open Purchase Order Module | view
 Open Purchase Order | apply_trade_condition
@@ -22,9 +20,7 @@ Open Purchase Order | payment_condition
 Open Purchase Order | profile_view
 Open Purchase Order | reference_generate
 Open Purchase Order | view
-Open Purchase Order | view_discount
 Open Purchase Order | view_stock
-Open Purchase Order | view_tax
 Open Sale Order Line | price_view
 Open Sale Order Line | quantity_view
 Open Sale Order Line | view
@@ -38,9 +34,7 @@ Open Sale Order | payment_condition
 Open Sale Order | profile_view
 Open Sale Order | reference_generate
 Open Sale Order | view
-Open Sale Order | view_discount
 Open Sale Order | view_stock
-Open Sale Order | view_tax
 Periodicity Line | periodicity
 Periodicity Line | view
 Sale Trade Condition | periodicity_line_list
