@@ -1,7 +1,1 @@
-Open Internal Order | Discount Line
-Open Internal Order | Tax Line
-Open Purchase Order | Discount Line
-Open Purchase Order | Tax Line
-Open Sale Order | Discount Line
-Open Sale Order | Tax Line
 Periodicity Line | Predicate
