@@ -2,8 +2,6 @@ Open Order Rule | rule_validation_workflow
 Open Sale Order Line | edit_workflow
 Open Sale Order Line | order_movement_simulation_interaction_workflow
 Open Sale Order Line | pricing_interaction_workflow
-Open Sale Order Line | tax_interaction_workflow
 Open Sale Order Line | trade_matrix_workflow
-Open Sale Order | delivery_tax_interaction_workflow
 Open Sale Order | edit_workflow
 Open Sale Order | open_order_workflow
